--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>SpaceX - Falcon 9</title>
   </head>
   <body>
+
+    /*Added CSS first, separate css file wasn't working */
+<img src="falcon-9.png style="width:auto">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;600;700&display=swap');
 
