--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
 
-    /*Added CSS first, separate css file wasn't working */
-<img src="falcon-9.png style="width:auto">
-<style>
+ <p style="background-image: url('falcon-9.png');"> 
+   
+       /*Added CSS first, separate css file wasn't working */
+
+   <style>
 @import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;600;700&display=swap');
 
 *,
