--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   </head>
   <body>
 
- <p style="background-image: url('falcon-9.png');"> 
+<!--<p style="background-image: url('falcon-9.png');"> -->
+    
    
        /*Added CSS first, separate css file wasn't working */
 
    <style>
+
+body {
+  background-image: url('falcon-9.jpg');
+}
+     
 @import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;600;700&display=swap');
 
 *,
